<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/timg"
    tools:context="com.example.claire.assignment2.RegisterActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fillEmailTV"
            android:text="@string/text_fill_email"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fillEmailET"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fillPasswordTV"
            android:text="@string/text_fill_password"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fillPasswordET"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirmPasswordTV"
            android:text="@string/text_confirm_password"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirmPasswordET"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:layout_marginBottom="10dp"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/genderSpinner"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/confirmRegister"
        android:text="@string/confirm"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary" />
</RelativeLayout>
