<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/pop_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        >


        <Button
            android:id="@+id/btn_take_photo"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="20dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/take_photo"
            android:background="@color/colorPrimary"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/btn_pick_photo"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="5dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_from_gallery"
            android:background="@color/colorPrimary"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="15dip"
            android:layout_marginBottom="15dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:background="@color/colorPrimary"
            android:textColor="#ffffff"
            android:textStyle="bold"

            />
    </LinearLayout>
</RelativeLayout>