<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/timg"
    tools:context="com.example.claire.assignment2.ItemInfoActivity">
    <ProgressBar
        android:id="@+id/itemInfo_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/setPhotoIV"
            android:src="@drawable/ic_menu_camera"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/itemTitleTV"
            android:text="@string/title"
            android:textSize="17sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/itemTitleET"
            android:textSize="17sp"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/productionDateTV"
            android:text="@string/production_date"
            android:textSize="17sp"
            android:layout_marginBottom="5dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/productionDateET"
            android:textSize="17sp"
            android:editable="false"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/shelfLifeTV"
            android:text="@string/shelf_life"
            android:textSize="17sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/shelfLifeET"
            android:textSize="17sp"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/expiryDateTV"
            android:text="@string/expiry_date"
            android:textSize="17sp"
            android:layout_marginBottom="5dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/expiryDateET"
            android:textSize="17sp"
            android:editable="false"
            android:layout_marginBottom="5dp"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/typeSpinner"
            android:layout_marginBottom="10dp"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/subTypeSpinner"
            android:layout_marginBottom="10dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/submitButton"
            android:text="@string/submit"
            android:background="@color/colorPrimary"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"/>
    </LinearLayout>
</RelativeLayout>
